# luagl

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  testlua.lua
.github/workflows/: cmake-multi-platform.yml  macos.yml  ubuntu.yml  windows.yml
bins/mac/arm64/: lua
bins/mac/x86_64/: lua
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: luagl.cpp  luagl.h  luagl_init.cpp  luagl_init.h  luagl_render.cpp  luagl_render.h  luagl_shader.cpp  luagl_shader.h  luagl_window.cpp  luagl_window.h  macros.h  main.cpp
test/: testlua.lua
